fixed button wrap on mobile

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -221,6 +221,7 @@ textarea{
   cursor:pointer;
   font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;;
   color: white;
+  display: block;
   font-weight: 600;
   font-size: .8em;
   padding: 18px 36px;
